--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
+Flask==3.1.0
+gunicorn==23.0.0
+numpy==2.1.2
+pandas==2.2.3
+scikit-learn==1.6.1
+scipy==1.13.1
+joblib==1.4.2
+threadpoolctl==3.5.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+tzdata==2025.1
+Werkzeug==3.1.3
+Jinja2==3.1.4
+itsdangerous==2.2.0
+MarkupSafe==3.0.3
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
-Flask==3.1.2
-importlib_metadata==8.7.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-joblib==1.5.2
-MarkupSafe==3.0.3
-numpy==1.26.4
-pandas==2.3.3
-pickle-mixin==1.0.2
-python-dateutil==2.9.0.post0
-pytz==2025.2
-scikit-learn==1.4.2
-scipy==1.13.1
-six==1.17.0
-threadpoolctl==3.6.0
-tzdata==2025.2
-Werkzeug==3.1.3
-zipp==3.23.0
+zipp==3.20.0
+importlib_metadata==8.6.0
